# contextgraph

./: Cargo.toml  README.md
crates/context-graph-core/: Cargo.toml  README.md
crates/context-graph-core/benches/: session_identity.rs
crates/context-graph-core/examples/: fsv_line_numbers.rs  fsv_source_metadata.rs  nvml_verify.rs
crates/context-graph-core/src/: error.rs  lib.rs
crates/context-graph-core/src/adapters/: mod.rs  utl_adapter.rs
crates/context-graph-core/src/alignment/: calculator.rs  config.rs  error.rs  pattern.rs  score.rs
crates/context-graph-core/src/atc/: accessor.rs  domain.rs  level3_bandit.rs  level4_bayesian.rs
crates/context-graph-core/src/autonomous/: autonomous_thresholds.rs  bootstrap.rs  curation.rs  drift.rs  evolution.rs  mod.rs  thresholds.rs  workflow.rs
crates/context-graph-core/src/causal/: asymmetric.rs  chain.rs  inference.rs  mod.rs  scm.rs
crates/context-graph-core/src/clustering/: birch.rs  fingerprint_matrix.rs  hdbscan.rs  manager.rs  mod.rs  stability.rs  synthesizer.rs  topic.rs
crates/context-graph-core/src/code/: mod.rs
crates/context-graph-core/src/config/: constants.rs  embedder_config.rs  mod.rs  sub_configs.rs
crates/context-graph-core/src/dream/: amortized.rs  controller.rs  hebbian.rs  hyperbolic_walk.rs  mcp_events.rs  mod.rs  nrem.rs  rem.rs  scheduler.rs  thresholds.rs  triggers.rs  types.rs  wake_controller.rs
crates/context-graph-core/src/embeddings/: category.rs  config.rs  mod.rs  provider.rs  token_pruning.rs
crates/context-graph-core/src/error/: conversions.rs  legacy.rs  mod.rs  sub_errors.rs  tests.rs
crates/context-graph-core/src/fusion/: mod.rs
crates/context-graph-core/src/graph/: asymmetric.rs
crates/context-graph-core/src/graph_linking/: edge_builder.rs  edge_type.rs  mod.rs  service.rs  thresholds.rs  typed_edge.rs  weight_projector.rs
crates/context-graph-core/src/gwt/: ego_node.rs  mod.rs  session_snapshot.rs  state_machine.rs  system.rs  system_awareness.rs  system_kuramoto.rs
crates/context-graph-core/src/index/: config.rs  error.rs  hnsw_impl.rs  mod.rs  splade_impl.rs
crates/context-graph-core/src/injection/: candidate.rs  mod.rs
crates/context-graph-core/src/johari/: default_manager.rs
crates/context-graph-core/src/layers/: coherence.rs  learning.rs  memory.rs  mod.rs  reflex.rs  sensing.rs  tests_full_state_verification.rs  thresholds.rs
crates/context-graph-core/src/marblestone/: domain.rs  edge_case_verification.rs  edge_type.rs  mod.rs  neurotransmitter_weights.rs  tests_domain.rs  tests_edge_type.rs  tests_neurotransmitter_weights.rs
crates/context-graph-core/src/memory/: code_watcher.rs  store.rs
crates/context-graph-core/src/neuromod/: acetylcholine.rs  dopamine.rs  mod.rs  noradrenaline.rs  serotonin.rs  state.rs
crates/context-graph-core/src/purpose/: computer.rs  default_computer.rs  mod.rs  tests.rs
crates/context-graph-core/tests/: docs_manual_test.rs  edge_case_tests.rs  embedder_fsv_test.rs  file_watcher_integration.rs  hyperbolic_walk_manual_test.rs  injection_manual_test.rs  memory_manual_test.rs  poincare_walk_manual_test.rs  rrf_edge_cases.rs  similarity_manual_test.rs  source_metadata_integration.rs  stability_fsv_test.rs  triggers_fsv_manual_test.rs  wake_controller_fsv_test.rs
(+1642 files in other folders)
